fix wrap tags and card title

--- a/src/assets/styles/utils/_utilites.scss
+++ b/src/assets/styles/utils/_utilites.scss
@@ -18,20 +18,20 @@
   text-transform: capitalize;
 }
 
+.u-no-decor {
+  text-decoration: none;
+}
+
 .u-align-center {
   align-items: center;
 }
 
-.u-text-r {
-  text-align: right !important;
+.u-flex-wrap-rev {
+  flex-wrap: wrap-reverse;
 }
 
-.u-text-l {
-  text-align: left !important;
-}
-
-.u-text-center {
-  text-align: center;
+.u-flex-wrap {
+  flex-wrap: wrap;
 }
 
 .u-bg-dark-img {
